5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1771_1183.log
== SUBMITION (2019-05-28 22:00:12) 
-- CODE:
from numpy import*
v=array(eval(input("digite o numero:")))
i=0
e=0
while(i<size(v)):
	if([i]>=0):
		e=e+1
	else:
		e=e+0
	i=i+1
a=
b=0
z=zreos(e,dtype=int)
while(b<v):
	if(v[a]>=0):
		z[b]=v[a]
		a=a+1
		b=b+1
	else:
		a=a+1
		b=b+0
print(z)
-- EXECUTION TIME:
0.11827
-- ERROR:
  File "/home/codebench/codes/1771/1183/main.py", line 11
    a=
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:00:43) 
-- CODE:
from numpy import*
v=array(eval(input("digite o numero:")))
i=0
e=0
while(i<size(v)):
	if([i]>=0):
		e=e+1
	else:
		e=e+0
	i=i+1
a=
b=0
z=zreos(e,dtype=int)
while(b<v):
	if(v[a]>=0):
		z[b]=v[a]
		a=a+1
		b=b+1
	else:
		a=a+1
		b=b+0
print(z)
-- ERROR:
File "XXXX", line 11
    a=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:00:56) 
-- CODE:
from numpy import*
v=array(eval(input("digite o numero:")))
i=0
e=0
while(i<size(v)):
	if([i]>=0):
		e=e+1
	else:
		e=e+0
	i=i+1
a=0
b=0
z=zreos(e,dtype=int)
while(b<v):
	if(v[a]>=0):
		z[b]=v[a]
		a=a+1
		b=b+1
	else:
		a=a+1
		b=b+0
print(z)
-- EXECUTION TIME:
0.469258
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1183/main.py", line 6, in <module>
    if([i]>=0):
TypeError: unorderable types: list() >= int()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:01:08) 
-- CODE:
from numpy import*
v=array(eval(input("digite o numero:")))
i=0
e=0
while(i<size(v)):
	if([i]>=0):
		e=e+1
	else:
		e=e+0
	i=i+1
a=0
b=0
z=zreos(e,dtype=int)
while(b<v):
	if(v[a]>=0):
		z[b]=v[a]
		a=a+1
		b=b+1
	else:
		a=a+1
		b=b+0
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:02:10) 
-- CODE:
from numpy import*
v=array(eval(input("digite o numero:")))
i=0
e=0
while(i<size(v)):
	if(v[i]>=0):
		e=e+1
	else:
		e=e+0
	i=i+1
a=0
b=0
z=zreos(e,dtype=int)
while(b<v):
	if(v[a]>=0):
		z[b]=v[a]
		a=a+1
		b=b+1
	else:
		a=a+1
		b=b+0
print(z)
-- EXECUTION TIME:
0.535254
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1183/main.py", line 13, in <module>
    z=zreos(e,dtype=int)
NameError: name 'zreos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:02:12) 
-- CODE:
from numpy import*
v=array(eval(input("digite o numero:")))
i=0
e=0
while(i<size(v)):
	if(v[i]>=0):
		e=e+1
	else:
		e=e+0
	i=i+1
a=0
b=0
z=zreos(e,dtype=int)
while(b<v):
	if(v[a]>=0):
		z[b]=v[a]
		a=a+1
		b=b+1
	else:
		a=a+1
		b=b+0
print(z)
-- EXECUTION TIME:
0.575509
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1183/main.py", line 13, in <module>
    z=zreos(e,dtype=int)
NameError: name 'zreos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:02:18) 
-- CODE:
from numpy import*
v=array(eval(input("digite o numero:")))
i=0
e=0
while(i<size(v)):
	if(v[i]>=0):
		e=e+1
	else:
		e=e+0
	i=i+1
a=0
b=0
z=zreos(e,dtype=int)
while(b<v):
	if(v[a]>=0):
		z[b]=v[a]
		a=a+1
		b=b+1
	else:
		a=a+1
		b=b+0
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:03:30) 
-- CODE:
from numpy import*
v=array(eval(input("digite o numero:")))
i=0
e=0
while(i<size(v)):
	if(v[i]>=0):
		e=e+1
	else:
		e=e+0
	i=i+1
a=0
b=0
z=zeros(e,dtype=int)
while(b<v):
	if(v[a]>=0):
		z[b]=v[a]
		a=a+1
		b=b+1
	else:
		a=a+1
		b=b+0
print(z)
-- EXECUTION TIME:
0.429464
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1183/main.py", line 14, in <module>
    while(b<v):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:03:34) 
-- CODE:
from numpy import*
v=array(eval(input("digite o numero:")))
i=0
e=0
while(i<size(v)):
	if(v[i]>=0):
		e=e+1
	else:
		e=e+0
	i=i+1
a=0
b=0
z=zeros(e,dtype=int)
while(b<v):
	if(v[a]>=0):
		z[b]=v[a]
		a=a+1
		b=b+1
	else:
		a=a+1
		b=b+0
print(z)
-- EXECUTION TIME:
0.629334
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1183/main.py", line 14, in <module>
    while(b<v):
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:03:39) 
-- CODE:
from numpy import*
v=array(eval(input("digite o numero:")))
i=0
e=0
while(i<size(v)):
	if(v[i]>=0):
		e=e+1
	else:
		e=e+0
	i=i+1
a=0
b=0
z=zeros(e,dtype=int)
while(b<v):
	if(v[a]>=0):
		z[b]=v[a]
		a=a+1
		b=b+1
	else:
		a=a+1
		b=b+0
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:05:15) 
-- CODE:
from numpy import*
v=array(eval(input("digite o numero:")))
i=0
e=0
while(i<size(v)):
	if(v[i]>=0):
		e=e+1
	else:
		e=e+0
	i=i+1
a=0
b=0
z=zeros(e,dtype=int)
while(b<e):
	if(v[a]>=0):
		z[b]=v[a]
		a=a+1
		b=b+1
	else:
		a=a+1
		b=b+0
print(z)
-- EXECUTION TIME:
0.396068
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
